[gd_scene load_steps=14 format=3 uid="uid://bw04bwuopdtai"]

[ext_resource type="Script" uid="uid://d0ww83e0cjjbr" path="res://scripts/managers/game_ui_manager.gd" id="1_3fmbn"]
[ext_resource type="Script" uid="uid://ddhocvt6e08ll" path="res://scripts/gameboard/board_canvas.gd" id="2_ocn0r"]
[ext_resource type="Script" uid="uid://bi8itfklc4565" path="res://scripts/gameboard/queue_display.gd" id="3_3fmbn"]
[ext_resource type="PackedScene" uid="uid://cy5jlc4dsmjkb" path="res://scenes/panels/GeneratorPanel.tscn" id="4_3fmbn"]
[ext_resource type="PackedScene" uid="uid://c2u2vsqack1g3" path="res://scenes/panels/UpgradesPanel.tscn" id="5_p1wqh"]
[ext_resource type="PackedScene" uid="uid://3rttg66hq1ux" path="res://scenes/panels/StatsPanel.tscn" id="6_5o0bf"]
[ext_resource type="PackedScene" uid="uid://bnb1pesewg3kg" path="res://scenes/panels/DebugPanel.tscn" id="7_pr20y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocn0r"]
bg_color = Color(0.737255, 0.556863, 0.443137, 0.752941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fmbn"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.18, 0.18, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.25, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="GDScript" id="GDScript_p1wqh"]
script/source = "extends Panel
#
#func _on_board_canvas_game_over(score: int, moves: int) -> void:
	#$GameOverBox.visible = true
	#$GameOverBox/Scores/ScoreLabel.text = \"Score: %s\" % score
	#$GameOverBox/Scores/MovesLabel.text = \"Moves: %s\" % moves
#
	#var tween := get_tree().create_tween()
	#tween.tween_property(self, \"custom_minimum_size:y\", 400, 0.3)
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1wqh"]
bg_color = Color(0.12, 0.16, 0.16, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.25, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trxdi"]
bg_color = Color(0.2, 0.18, 0.14, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.28, 0.24, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xh2g"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.929412, 0.878431, 0.784314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenManager" type="Node" parent="."]
script = ExtResource("1_3fmbn")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ocn0r")

[node name="DebugMargins" type="MarginContainer" parent="."]
modulate = Color(0, 0, 0, 1)
top_level = true
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 32

[node name="DebugPanel" parent="DebugMargins" instance=ExtResource("7_pr20y")]
layout_mode = 2

[node name="GameMargins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 60

[node name="GameBoard" type="VBoxContainer" parent="GameMargins"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TopBarPanel" type="Panel" parent="GameMargins/GameBoard"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3fmbn")
script = SubResource("GDScript_p1wqh")

[node name="TopBar" type="HBoxContainer" parent="GameMargins/GameBoard/TopBarPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="FrontSpacer" type="Control" parent="GameMargins/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.6

[node name="ScorePrefix" type="Label" parent="GameMargins/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
text = "Score: "

[node name="ScoreValue" type="Label" parent="GameMargins/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_stretch_ratio = 27.4

[node name="MidSpacer" type="Control" parent="GameMargins/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.6

[node name="Menu" type="Button" parent="GameMargins/GameBoard/TopBarPanel/TopBar"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
size_flags_horizontal = 0
text = "☰"

[node name="BackSpacer" type="Control" parent="GameMargins/GameBoard/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.6

[node name="GameOverBox" type="VBoxContainer" parent="GameMargins/GameBoard/TopBarPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Label" type="Label" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox"]
layout_mode = 2
text = "Nice job."
horizontal_alignment = 1

[node name="Scores" type="HBoxContainer" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox/Scores"]
layout_mode = 2

[node name="MovesLabel" type="Label" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox/Scores"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 40
alignment = 1

[node name="Restart" type="Button" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox/Buttons"]
layout_mode = 2
text = "Play Again"

[node name="ConvertAndStash" type="Button" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox/Buttons"]
layout_mode = 2
text = "Convert & Stash"

[node name="IdleScreenSwap" type="Button" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox/Buttons"]
layout_mode = 2
text = "See Generators"

[node name="Stats" type="Button" parent="GameMargins/GameBoard/TopBarPanel/GameOverBox/Buttons"]
layout_mode = 2
text = "Stats"

[node name="BoardPanel" type="Panel" parent="GameMargins/GameBoard"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p1wqh")

[node name="BoardContainer" type="CenterContainer" parent="GameMargins/GameBoard/BoardPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="BoardCanvas" type="Control" parent="GameMargins/GameBoard/BoardPanel/BoardContainer"]
layout_mode = 2
script = ExtResource("2_ocn0r")

[node name="QueuePanel" type="Panel" parent="GameMargins/GameBoard"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_trxdi")
script = ExtResource("3_3fmbn")

[node name="QueueBar" type="HBoxContainer" parent="GameMargins/GameBoard/QueuePanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="OnDeckTilesBackground" type="Panel" parent="GameMargins/GameBoard/QueuePanel/QueueBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="QueueTiles" type="HBoxContainer" parent="GameMargins/GameBoard/QueuePanel/QueueBar/OnDeckTilesBackground"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 1

[node name="ArrowLabel" type="Label" parent="GameMargins/GameBoard/QueuePanel/QueueBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "→"

[node name="NextTileBackground" type="Panel" parent="GameMargins/GameBoard/QueuePanel/QueueBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6xh2g")

[node name="IdleMargins" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 60

[node name="GeneratorPanel" parent="IdleMargins" instance=ExtResource("4_3fmbn")]
visible = false
layout_mode = 2

[node name="UpgradesMargins" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 92
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 92

[node name="UpgradesPanel" parent="UpgradesMargins" instance=ExtResource("5_p1wqh")]
visible = false
layout_mode = 2

[node name="StatsMargins" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 32

[node name="StatsPanel" parent="StatsMargins" instance=ExtResource("6_5o0bf")]
visible = false
layout_mode = 2

[connection signal="game_over" from="GameMargins/GameBoard/BoardPanel/BoardContainer/BoardCanvas" to="ScreenManager" method="_on_board_canvas_game_over"]
[connection signal="visibility_changed" from="IdleMargins/GeneratorPanel" to="IdleMargins/GeneratorPanel" method="_on_visibility_changed"]
